Bug 257841 - Escape in location combo box should restore current view's URL
Summary: Escape in location combo box should restore current view's URL
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 226736 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-25 04:51 UTC by Marcel Partap
Modified: 2011-12-19 01:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attempt at resetting location bar on escape press (997 bytes, patch)
2010-11-25 04:51 UTC, Marcel Partap
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcel Partap 2010-11-25 04:51:40 UTC
Created attachment 53714 [details]
attempt at resetting location bar on escape press

Version:           SVN (using Devel) 
OS:                Linux

With recent changes to protect user given input, it has become hard-impossible to restore the view's original URL. Usually (i.e. f.e. IE, since a decade or more) pressing ESCape does that. I've tried to implement this but patch fell short from working. Somehow doesn't work with kparts and switching to other tabs between typing and pressing escape shows unwanted side effects.

Reproducible: Always




OS: Linux (x86_64) release 2.6.37-rc2-git2
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Marcel Partap 2011-07-19 17:20:01 UTC
Git commit 7c1e03ae16570f417db70e0b83c0b2a54b5ca7bd by Marcel Partap.
Committed on 19/07/2011 at 19:02.
Pushed by mpartap into branch 'master'.

Konqueror location bar: reset url to current view's actual url on ESC

Simplest possible approach: put current view's url in address bar
 - even for corner cases like about:konqueror or about:blank
 (discussed @ https://svn.reviewboard.kde.org/r/6681 )

BUG: 257841

M  +5    -0    konqueror/src/konqmainwindow.cpp

http://commits.kde.org/kde-baseapps/7c1e03ae16570f417db70e0b83c0b2a54b5ca7bd
Comment 2 Dawit Alemayehu 2011-12-19 01:38:03 UTC
*** Bug 226736 has been marked as a duplicate of this bug. ***