Konqueror location bar: reset url to current view's actual url on ESC

Simplest possible approach: put current view's url in address bar
 - even for corner cases like about:konqueror or about:blank
 (discussed @ https://svn.reviewboard.kde.org/r/6681 )

BUG: 257841